# area-icongen

./: .gitattributes  .gitignore  Cargo.toml  Trunk.toml  area-icongen-fe6ed848fa3dd97.js  area-icongen-fe6ed848fa3dd97_bg.wasm  index.html
.github/workflows/: pages.yml
assets/: sw.js
src/: app.rs  font.rs  icongen.rs  icongen_old.rs  lib.rs  main.rs  spritesheet.qoi
