[package]
name = "area-icongen"
version = "0.1.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Absolucy/area-icongen"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["persistence", "glow"] }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png", "qoi"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlAnchorElement", "Url", "Blob", "BlobPropertyBag", "Element"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-file-dialog = "0.12"

[profile.release]
lto = "thin"
overflow-checks = false
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_to_string = "warn"
